--- a/Nov6 2021(Grid Templates)/basic-86/index.html
+++ b/Nov6 2021(Grid Templates)/basic-86/index.html
@@ -3,8 +3,51 @@
 <head>
 <title>Basic 86</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+<style>
+   @media only screen and (max-width: 1023px){
+    *{box-sizing: border-box;}
+    #header{width: 100%;padding:10px 0px;}
+    #header #hgroup{width:100%;text-align: center;}
+    #header nav{ margin:10px 0 0 0; padding:5px 0; color:#C0BAB6; background-color:#232323;}
+    #header nav ul{padding:0px 5px;display: grid;grid-template-rows:auto auto auto auto auto ;}
+    #header nav li{border: 1px solid yellow;padding:5px;text-align: center;}
+    #item1{grid-area: 2;}
+    #item2{grid-area: 1;}
+    #container{width:100%;padding:10px 0px;}
+    #container #slider figure {display: grid;grid-template-rows: auto auto;}
+    #container #slider figure figcaption{display:block;width:100%; height:150px; padding:10px; text-align: center; overflow:hidden; color:#989898; background-color:#DEDEDE; line-height:1.6em;}
+    #container .more {text-align: center;} 
+    #container #slider figure img{width:100%; height:300px;}
+    #container #slider {margin-bottom: 20px;}
+    .one_third{width: 100%;border: 1px solid purple;margin-bottom: 2px;}
+    .one_quarter{width: 100%;border: 1px solid black;text-align: center;margin-bottom: 2px;}
+    #container #homepage #services {margin-bottom: 10px;}
+    #container #homepage #latest article figure {width:100%;}
+    #footer{width: 100%;}
+    
+   }
+  @media only screen and (min-width: 1024px) {
+    *{box-sizing: border-box;}
+    #header{display: grid;grid-template-columns: auto auto;}
+    #header #hgroup{ margin:0 0 20px 0;}
+    #header nav{display:block; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
+    #header nav ul{display: grid;grid-template-columns: auto auto auto auto auto;}
+    #header nav li{margin-right:25px; text-transform:uppercase;}
+    #container #slider figure {display: grid;grid-template-columns: auto auto;}
+    #container #slider figure img{width:630px; height:300px;}
+    #container #slider figure figcaption{display:block;width:280px; height:300px; padding:20px; overflow:hidden; color:#989898; background-color:#DEDEDE; line-height:1.6em;}
+    #item1{grid-area: 2;}
+    #item2{grid-area: 1;}
+    #container #homepage #services {display: grid;grid-template-columns: auto auto auto;}
+    .one_third, .two_third, .three_third{display:block; margin:0 30px 0 0;}
+    #container #homepage #latest {display: grid;grid-template-columns: auto auto auto auto;}
+    
+
+  }
+</style>
 </head>
 <body>
 <div class="wrapper row1">
@@ -29,16 +72,16 @@
   <div id="container" class="clear">
     <!-- Slider -->
     <section id="slider" class="clear">
-      <figure><img src="images/demo/630x300.gif" alt="">
-        <figcaption>
+      <figure id="item1"><img src="images/demo/630x300.gif" alt="">
+        <figcaption id="item2">
           <h2>Eu justo augue estas</h2>
           <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
           <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </figcaption>
       </figure>
     </section>
-    <!-- main content -->
-    <div id="homepage">
+     <!-- main content -->
+     <div id="homepage">
       <!-- services area -->
       <section id="services" class="clear">
         <!-- article 1 -->
@@ -63,61 +106,61 @@
           <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </article>
       </section>
-      <!-- / services area -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- ########################################################################################## -->
-      <!-- One Quarter -->
-      <section id="latest" class="last clear">
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter">
-          <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-        <article class="one_quarter lastbox">
-          <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
-            <figcaption>
-              <h2>Indonectetus facilis</h2>
-              <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
-              <footer class="more"><a href="#">Read More &raquo;</a></footer>
-            </figcaption>
-          </figure>
-        </article>
-      </section>
-      <!-- / One Quarter -->
+       <!-- / services area -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- ########################################################################################## -->
+        <!-- One Quarter -->
+        <section id="latest" class="last clear">
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
+              <figcaption>
+                <h2>Indonectetus facilis</h2>
+                <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+                <footer class="more"><a href="#">Read More &raquo;</a></footer>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
+              <figcaption>
+                <h2>Indonectetus facilis</h2>
+                <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+                <footer class="more"><a href="#">Read More &raquo;</a></footer>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter">
+            <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
+              <figcaption>
+                <h2>Indonectetus facilis</h2>
+                <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+                <footer class="more"><a href="#">Read More &raquo;</a></footer>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="one_quarter lastbox">
+            <figure><img src="images/demo/215x100.gif" width="215" height="100" alt="">
+              <figcaption>
+                <h2>Indonectetus facilis</h2>
+                <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna.</p>
+                <footer class="more"><a href="#">Read More &raquo;</a></footer>
+              </figcaption>
+            </figure>
+          </article>
+        </section>
+        <!-- / One Quarter -->
+      </div>
+      <!-- / content body -->
     </div>
-    <!-- / content body -->
   </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+   <!-- Footer -->
+   <div class="wrapper row3">
+    <footer id="footer" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    </footer>
+  </div>
 </body>
 </html>
